Fix overflow at 6000px - 670px

--- a/styles.scss
+++ b/styles.scss
@@ -196,7 +196,6 @@ footer {
 @media (min-width: 600px) {
   body {
     background-image: url(images/bg-intro-desktop.png);
-    width: 100vw;
   }
 
   main {
